# agent-comm-hub

./: .env.example  .gitignore  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SKILL.md  glama.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
client-sdk/: .gitignore  README_PYPI.md  backoff.ts  package.json  pyproject.toml
demo/: index.html
deploy/: docker-compose.yml
docs/: API_REFERENCE.md  README_CN.md  README_EN.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  hub-db-split-three-layer-protection.md  index.md
project-specs/: phase-2-day5-report.md
scripts/: check_db_consistency.sh  cron_db_watchdog.sh  install.sh  migrate_from_agent.js  start_hub_server.sh  test-e2e.sh  test-e2e.ts
src/: backup.ts  db.d.ts  db.js  db.ts  dedup.ts  errors.ts  evolution.d.ts  evolution.js  evolution.ts  identity.d.ts  identity.js  identity.ts  logger.js  logger.ts  memory.js  memory.ts  metrics.d.ts  metrics.js  metrics.ts  orchestrator.ts  ratelimit.ts  security.js  security.ts  server.js  server.ts  sse.ts  state-machine.ts  stdio.js  stdio.ts  tools.d.ts  tools.js  tools.ts  types.ts  utils.d.ts  utils.js  utils.ts  version.ts
tests/: _tmp_5556.ts  security_utils.py  test-day3.py  test-phase2-day1.py  test-phase2-day2.py  test-phase2-day3.py  test-phase2-day4.py  test-phase2-day5.py  test-phase2-gogo.py  test-phase3-day3.py  test-phase3-day4.py  test-phase3-day5.py  test-phase4-day1.py  test-phase4b-day1.py  test-phase4b-day2.py  test-phase4b-day3.py  test-phase4b-day4.py  test-phase4b-day5.py  test-phase5a-day1.py  (+9 more)
(+71 files in other folders)
