[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-comm-hub"
version = "2.5.1"
description = "Python SDK for Agent Communication Hub — multi-agent messaging, task scheduling, shared memory"
readme = "README_PYPI.md"
license = {text = "MIT"}
authors = [{name = "liuboacean", email = "261211168@qq.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/liuboacean/agent-comm-hub"
Source = "https://github.com/liuboacean/agent-comm-hub"

[tool.setuptools]
py-modules = ["hub_client"]
